# fuzzy-ctrl

./: CMakeLists.txt  Makefile.win  README.md  main.cpp  rule_sets.cpp  rule_sets.h
akceleracija/: akceleracija_deduction_policy.cpp  akceleracija_deduction_policy.h  akceleracija_rule_base.cpp  akceleracija_rule_base.h
domain/: composite_domain.cpp  composite_domain.h  domain.cpp  domain.h  simple_domain.cpp  simple_domain.h
fuzzy_set/: calculated_fuzzy_set.cpp  calculated_fuzzy_set.h  fuzzy_set.cpp  fuzzy_set.h  fuzzy_set_decorator.cpp  fuzzy_set_decorator.h  mutable_fuzzy_set.cpp  mutable_fuzzy_set.h  standard_fuzzy_sets.cpp  standard_fuzzy_sets.h
fuzzy_system/: deduction_policies.cpp  deduction_policies.h  defuzzifiers.cpp  defuzzifiers.h  fuzzy_ctrl_system.cpp  fuzzy_ctrl_system.h  inputs.cpp  inputs.h  rule_builder.cpp  rule_builder.h
kormilo/: kormilo_deduction_policy.cpp  kormilo_deduction_policy.h  kormilo_rule_base.h
operations/: implications.cpp  implications.h  modifiers.cpp  modifiers.h  operations.cpp  operations.h
relations/: binary_fuzzy_composition.cpp  binary_fuzzy_composition.h  fuzzy_relation.cpp  fuzzy_relation.h
